examples/failing/MutRec2.purs
module Main where

import Prelude

x = x
